# game

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
examples/: client.rs  server.rs
item/: Cargo.toml
lib/net/: Cargo.toml
lib/net/src/client/: plugin.rs  system.rs
lib/net/src/server/: plugin.rs  system.rs  system_param.rs
lib/voxel_world/: Cargo.toml
lib/voxel_world/src/: chunk.rs  lib.rs  plugin.rs  system_param.rs  voxel.rs  voxel_world.rs
net/: Cargo.toml
net/examples/: client.rs  server.rs
net/src/: client.rs  lib.rs  server.rs  util.rs
net/src/client/: event.rs  mod.rs  plugin.rs  system.rs  system_param.rs
net/src/server/: event.rs  mod.rs  plugin.rs  system.rs  system_param.rs
proc-macros/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
ui/: Cargo.toml
ui/src/: lib.rs
util/: Cargo.toml
util/src/: lib.rs  net.rs
util/src/net/: client.rs  mod.rs  server.rs
world/: Cargo.toml
world/examples/: meshing.rs
world/src/: block.rs  chunk.rs  lib.rs
