[workspace]
members = ["client", "net", "server", "util", "world"]

[workspace.dependencies]
bevy = "0.12.0"
bevy-inspector-egui = "0.21.0"
bincode = "1.3.3"
net = { path = "./net" }
quote = "1.0.33"
serde = { version = "1.0.192", features = ["derive"] }
util = { path = "./util" }
world = { path = "./world" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
