[workspace]
members = ["client", "item", "net", "server", "ui", "world"]

[workspace.dependencies]
# external dependencies
bevy = "0.12.0"
bevy-inspector-egui = "0.21.0"
bincode = "1.3.3"
quote = "1.0.33"
serde = { version = "1.0.193", features = ["derive"] }
# internal dependencies
item = { path = "./item" }
net = { path = "./net" }
ui = { path = "./ui" }
world = { path = "./world" }

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
